@@ -1,7 +1,6 @@
 package ch.scaille.tcwriter.server.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import ch.scaille.tcwriter.generators.visitors.HumanReadableVisitor;
 import ch.scaille.tcwriter.model.testcase.TestCase;
@@ -11,7 +10,7 @@ public class TestCaseService {
 
 	public List<String> computeHumanReadableTexts(TestCase tc, List<TestStep> steps) {
 		HumanReadableVisitor humanReadableVisitor = new HumanReadableVisitor(tc, false);
-		return steps.stream().map(humanReadableVisitor::process).collect(Collectors.toList());
+		return steps.stream().map(humanReadableVisitor::process).toList();
 	}
 
 }
